--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:cowboysmall-tools/hugo-devresume-theme.git
 [submodule "themes/hugo-theme-stack"]
 	path = themes/hugo-theme-stack
-	url = https://github.com/CaiJimmy/hugo-theme-stack/
+	url = git@github.com:AttixZhangCs/hugo-theme-stack.git
