--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://attixzhangcs.github.io/azhang.github.io/a/b/c
+baseurl: https://attixzhangcs.github.io/azhang.github.io
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 5
